fixed spacing issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,6 @@
 
 body {
     background: #fff;
-
 }
 
 .container {
@@ -23,7 +22,7 @@ body {
     margin: 0 auto;
     text-align: center;
     border-radius: 4px;
-    margin-top: 15px;
+
 }
 
 /* Header Section
@@ -63,8 +62,8 @@ header {
     // background:green;
     .logo {
         padding-top: 100px;
-        img{
-            display:none;
+        img {
+            display: none;
         }
         h1 {
             font-weight: 700;
@@ -90,11 +89,17 @@ li {
 /* About Section
 ===================================*/
 .about-section {
-    padding: 45px 0 45px 0;
+    padding: 60px 0 60px 0;
     h2 {
         padding-bottom: 10px;
         font-size: 30px;
         line-height: 1.1;
+    }
+    p{
+        padding-bottom:28px;
+        &:last-child{
+            padding-bottom:0;
+        }
     }
 }
 
@@ -144,7 +149,12 @@ li {
             padding-bottom: 5px;
         }
         p {
-            padding-bottom: 60px;
+            padding-bottom: 28px;
+        }
+    }
+    .pad-none {
+        p {
+            padding-bottom: 0;
         }
     }
 }
