--- a/_sass/_fontandcolor.scss
+++ b/_sass/_fontandcolor.scss
@@ -6,49 +6,46 @@ $lightgreen: #88bb28;
 $tan: #dac48f;
 $orange: #cc6806;
 
-*{
-	text-decoration:none;
+* {
+    text-decoration: none;
 }
 
- a {
+a {
     font-family: "source-sans-pro",sans-serif;
-font-style: normal;
-font-weight: 700;
-    font-size:1.3rem;
-    color:black;
-     text-transform: uppercase;
-
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.3rem;
+    font-size:20px;
+    color: black;
+    text-transform: uppercase;
 }
 
-
-p{
-	color:#787878;
-font-family: "droid-sans",sans-serif;
-font-style: normal;
-font-weight: 400;
-line-height:1.5;
-max-width:550px;
+p {
+    color: #787878;
+    font-family: "droid-sans",sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    max-width: 550px;
 }
 
-h1,h2,h3,h4{
-		   font-family: "source-sans-pro",sans-serif;
-font-style: normal;
-
-
-}
-h2{
-	color:#2E3031;
-	font-size:1.35rem;
-
+h1, h2, h3, h4 {
+    font-family: "source-sans-pro",sans-serif;
+    font-style: normal;
 }
 
-
-h3{
- font-size:32px;
+h2 {
+    color: #2E3031;
+    font-size: 1.35rem;
+    font-size: 21px;
 }
 
-
-h4{
-	 font-size:24px;
+h3 {
+    font-size: 2rem;
+    font-size: 32px;
 }
 
+h4 {
+    font-size: 1.5rem;
+    font-size: 24px;
+}
